[package]
name = "pmw3360-mouse-firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloc-cortex-m = "0.4.4"
cortex-m-rt = "0.7.3"
panic-rtt-target = "0.1.3"
rtt-target = "0.5.0"
fugit = "0.3.7"
embedded-hal = "1.0.0"
stm32-usbd = "0.6.0"
usb-device = "0.2.3"
usbd-hid-device = "0.1.1"

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt", "medium"]